# opus_clone

./: .env.example  .gitignore  CLAUDE_VPS.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: gpu_api_render_schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: channels.ts  client.ts  clips.ts  health.ts  videos.ts
frontend/src/hooks/: useChannels.ts  useClips.ts  useHealth.ts  usePagination.ts  useVideos.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ChannelDetailPage.tsx  ChannelsPage.tsx  ClipsPage.tsx  DashboardPage.tsx  NotFoundPage.tsx  VideoDetailPage.tsx  VideosPage.tsx
frontend/src/types/: channel.ts  clip.ts  health.ts  video.ts
migrations/: 001_initial.sql
scripts/: bootstrap.sh  manual_process.py  seed_style_presets.py
src/opus_clone/: config.py  db.py  logging.py
src/opus_clone/agent/: graph.py  state.py
src/opus_clone/api/: channels.py  clips.py  health.py  main.py  videos.py  webhooks.py
src/opus_clone/clients/: gpu_api.py  image_search.py  scraper_agent.py  youtube_data.py
src/opus_clone/models/: db.py  domain.py  edl.py  gpu_api.py
src/opus_clone/scheduler/: __main__.py  poller.py  pubsub_renewer.py
src/opus_clone/services/: edl_builder.py  hmac_webhook.py  minio.py
tests/: conftest.py  test_api_e2e.py
tests/fixtures/: sample_analyze.json  sample_edl.json  sample_transcript.json
tests/unit/: test_config.py  test_edl_builder.py  test_gpu_client.py  test_hmac_webhook.py  test_models.py
(+33 files in other folders)
