[project]
name = "opus-clone"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Automated video clipping platform — monitors channels, generates viral shorts"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "dramatiq[redis]>=1.17.0",
    "apscheduler>=3.10.4",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "minio>=7.2.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "google-api-python-client>=2.145.0",
    "google-auth-oauthlib>=1.2.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "backoff>=2.2.0",
    "pytz>=2024.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opus_clone"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
